--- a/index.tex
+++ b/index.tex
@@ -129,7 +129,7 @@
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
   pdftitle={Conceptualizing open health data platforms for low- and middle income countries},
-  pdfauthor={Daniel Kapitan; Femke Heddema; Julie Fleischer; Chris Ihure; Antragama Abbas; Steven Wanyee; XXX; John Grimes; Mark van der Graaf; Mark de Reuver},
+  pdfauthor={Daniel Kapitan; Femke Heddema; Julie Fleischer; Chris Ihure; Antragama Abbas; Steven Wanyee; Alessandro Pietrobon; John Grimes; Mark van der Graaf; Mark de Reuver},
   pdfkeywords={Analytics-on-FHIR, SQL-on-FHIR, HIE, data
 platforms, LMICs, digital health},
   colorlinks=true,
@@ -169,7 +169,7 @@ income countries}
 %
 }
 
-\author[6]{XXX%
+\author[6]{Alessandro Pietrobon%
 %
 }
 
