--- a/index.qmd
+++ b/index.qmd
@@ -5,6 +5,7 @@ format:
     toc: true
     toc-depth: 2
     fig-cap-location: top
+    code-fold: true
   elsevier-pdf:
     keep-tex: true
     journal:
@@ -235,8 +236,31 @@ Default workflow is extraction of data from SHR using Bulk FHIR API. Data contai
 
 Today, many components of the OpenHIE specification are now available as a digital public goods, as listed in @tbl-digital-public-goods. To further ease the development, configuration and deployment of health information exchanges, the concept of 'Instant OpenHIE' has been championed to (i) allow implementers to engage with a preconfigured health information exchange solution and running tools (based on the architecture) and test their applicability and functionality with a real health context problem; and (ii) have a packaged reference version of the OpenHIE architecture that is comprised of a set of reference technologies and other appropriate tools that form the building blocks of the health information exchange that can be configured and extended to support particular use cases [@InstantOpenHIEv2]. Besides the core functional components of the OpenHIE architecture, the Instant OpenHIE toolkit allows packaging and integration of generic components such as Identity and Access Managment (IAM) and a reverse proxy gateway. In the following, we will evaluatie three of such configurations, with the aim to conceptualize and evaluate the proposed Data and Analytics Services domain of of the OpenHIE architecture.
 
-![Overview of current open source implementations of components included in the OpenHIE specification that are FHIR-compatible. The category Analytics Services is not a part of the original OpenHIE and is discussed in the paper. Point-of-Service systems are excluded for brevity. A systematic review of such digital public goods is beyond the scope of this document.](images/digital-public-goods.png){#tbl-digital-public-goods}
+| Category  | Component | Digital Public Good |
+|:----------|:----------|:--------------------|
+| **Interoperability layer (IOL)** | IOL | [OpenHIM](http://openhim.org) |
+| **Registry Services** | Client Registry (CR) | [SanteMPI](https://help.santesuite.org/product-overview/santesuite-products/master-patient-index-santempi) |
+| | | [JeMPI](https://jembi.gitbook.io/jempi/) |
+| | | [OpenCR](https://www.openclientregistry.org/) |
+| | Facility Registry (FR) | [Global Open Facility Registry (GOFR)](https://github.com/intrahealth/gofr) |
+| | Health Worker Registry (HWR) | [iHRIS](https://www.ihris.org/ihris-50) |
+| | Terminology Service (TS) | [OCL Terminology Service](https://openconceptlab.org/terminology-service/) |
+| | Product Catalog (PC) | not available |
+| **Business Domain Services** | Shared Health Record (SHR) | [HAPI FHIR](https://hapifhir.io/) |
+| | | [Fhirbase](https://www.health-samurai.io/fhirbase) |
+| | | [FHIR Server for Azure](https://github.com/microsoft/fhir-server) |
+| | | [I-TECH-UW SHR](https://github.com/I-TECH-UW/shared-health-record) |
+| | Health Management Information System (HMIS) | [DHIS2](http://dhis2.org/) |
+| | Finance and Insurance Service (FIS) | [OpenIMIS](http://openimis.org/) |
+| | Logistics Management Information System (LMIS) | [OpenLMIS](http://openlmis.org/) |
+| **Generic** | Identity and Access Management (IAM) | [Keycloak](https://www.keycloak.org/) |
+| | Gateway & proxy | [FHIR Information Gateway](https://github.com/google/fhir-gateway) |
+| | Admin dashboard for SHR | [OpenSRP FHIR Web](https://github.com/onaio/fhir-web) |
+| | Configuration and deployment | [Instant OpenHIE](https://jembi.gitbook.io/instant-v2/) |
 
+
+
+: Overview of current open source implementations of components included in the OpenHIE specification that are FHIR-compatible. The category Analytics Services is not a part of the original OpenHIE and is discussed in the paper. Point-of-Service systems are excluded for brevity. A systematic review of such digital public goods is beyond the scope of this document. {#tbl-digital-public-goods .striped .hover .responsive}
 
 ## Evaluation
 
