--- a/index.tex
+++ b/index.tex
@@ -129,7 +129,7 @@
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
   pdftitle={Conceptualizing open health data platforms for low- and middle income countries},
-  pdfauthor={Daniel Kapitan; Femke Heddema; Julie Fleischer; Chris Ihure; Antragama Abbas; Steven Wanyee; Alessandro Pietrobon; John Grimes; Mark van der Graaf; Mark de Reuver},
+  pdfauthor={Daniel Kapitan; Femke Heddema; Julie Fleischer; Chris Ihure; Antragama Abbas; Steven Wanyee; Alessandro Pietrobon; Ryan Chrichton; John Grimes; Mark van der Graaf; Nicole Spieker; Mark de Reuver},
   pdfkeywords={Analytics-on-FHIR, SQL-on-FHIR, HIE, data
 platforms, LMICs, digital health},
   colorlinks=true,
@@ -173,11 +173,19 @@ income countries}
 %
 }
 
-\author[7]{John Grimes%
+\author[7]{Ryan Chrichton%
+%
+}
+
+\author[8]{John Grimes%
 %
 }
 
 \author[1]{Mark van der Graaf%
+%
+}
+
+\author[1]{Nicole Spieker%
 %
 }
 
@@ -199,10 +207,15 @@ Technology},city={Delft},country={the
 Netherlands},countrysep={,},postcodesep={}}
 \affiliation[5]{organization={IntelliSOFT},city={Nairobi},country={Kenya},countrysep={,},postcodesep={}}
 \affiliation[6]{organization={ONA},city={Nairobi},country={Kenya},countrysep={,},postcodesep={}}
-\affiliation[7]{organization={Australian e-Health Research
+\affiliation[7]{organization={Jembi Health
+Systems},city={Durban},country={South
+Africa},countrysep={,},postcodesep={}}
+\affiliation[8]{organization={Australian e-Health Research
 Centre},city={Brisbane},country={Australia},countrysep={,},postcodesep={}}
 
 \cortext[cor1]{Corresponding author}
+
+
 
 
 
