--- a/index.tex
+++ b/index.tex
@@ -896,11 +896,15 @@ architecture.
   >{\raggedright\arraybackslash}p{(\columnwidth - 4\tabcolsep) * \real{0.2558}}
   >{\raggedright\arraybackslash}p{(\columnwidth - 4\tabcolsep) * \real{0.4884}}@{}}
 \caption{Overview of current open source implementations of components
-included in the OpenHIE specification that are FHIR-compatible. The
-category Analytics Services is not a part of the original OpenHIE and is
-discussed in the paper. Point-of-Service systems are excluded for
-brevity. A systematic review of such digital public goods is beyond the
-scope of this document.}\label{tbl-digital-public-goods}\tabularnewline
+that fit in the OpenHIE specification. The category Analytics Services
+is not a part of the original OpenHIE and is discussed in the paper.
+Point-of-Service systems are excluded for brevity.List compiled using
+\href{https://digitalsquare.org/digital-health-global-goods}{Global
+Goods for Digital Health},
+\href{https://digitalpublicgoods.net/}{Digital Public Goods Alliance}
+and search of open source code repositories. A systematic review of such
+digital public goods is beyond the scope of this
+document.}\label{tbl-digital-public-goods}\tabularnewline
 \toprule\noalign{}
 \begin{minipage}[b]{\linewidth}\raggedright
 Category
@@ -925,19 +929,23 @@ Digital Public Good
 \endlastfoot
 \textbf{Interoperability layer (IOL)} & IOL &
 \href{http://openhim.org}{OpenHIM} \\
+& & \href{https://www.mhero.org/technology}{mHero} \\
+& & \href{https://docs.openfn.org/}{OpenFN} \\
 \textbf{Registry Services} & Client Registry (CR) &
 \href{https://help.santesuite.org/product-overview/santesuite-products/master-patient-index-santempi}{SanteMPI} \\
 & & \href{https://jembi.gitbook.io/jempi/}{JeMPI} \\
 & & \href{https://www.openclientregistry.org/}{OpenCR} \\
+& & \href{https://www.opencrvs.org/}{OpenCRVS} \\
 & Facility Registry (FR) &
 \href{https://github.com/intrahealth/gofr}{Global Open Facility Registry
 (GOFR)} \\
+& & \href{https://geoprismregistry.com/}{GeoPrism Registry (GPR)} ` \\
 & Health Worker Registry (HWR) &
 \href{https://www.ihris.org/ihris-50}{iHRIS} \\
 & Terminology Service (TS) &
 \href{https://openconceptlab.org/terminology-service/}{OCL Terminology
 Service} \\
-& Product Catalog (PC) & not available \\
+& Product Catalog (PC) & \href{https://productcatalog.io/}{PCMT} \\
 \textbf{Business Domain Services} & Shared Health Record (SHR) &
 \href{https://hapifhir.io/}{HAPI FHIR} \\
 & & \href{https://www.health-samurai.io/fhirbase}{Fhirbase} \\
@@ -951,6 +959,7 @@ SHR} \\
 \href{http://openimis.org/}{OpenIMIS} \\
 & Logistics Management Information System (LMIS) &
 \href{http://openlmis.org/}{OpenLMIS} \\
+& & \href{https://openboxes.com/features/}{OpenBoxes} \\
 \textbf{Generic} & Identity and Access Management (IAM) &
 \href{https://www.keycloak.org/}{Keycloak} \\
 & Gateway \& proxy & \href{https://github.com/google/fhir-gateway}{FHIR
